  
- Feature requests that are included:
  - #1231 Make default templates use uploads/images/logo1.gif instead of images/cms/logo1.gif.  
  - #2897 Moved Image/Thumbnail in content-page to options-tab.
  - #3025 News: new parameter, action="detail", which can be used to show a specific entry in detail-mode directly.
  - #3035 link from admin backend to the forge.
  
 - TinyMCE
  - Added support for configuring the third toolbar
  - Added option to show actual thumbnail-files
  - Fixed filetype icons in FilePicker
  - Implemented | as seperator in toolbars
  - Fixed working of force-cleanup-on-paste
  - Fixed toolbars for frontend-usage


Version 1.5.2 - Caguas
-----------------------------
- Fixes of several bugs:
  - #2406 Re-order pages causes hierarchy to be incorrect (longstanding), which could be caused by:
		a) two users simultaneously re-ordering pages or,
		b) moving a second page while ajax hasn't finished moving the first.
  - #2476 cyclic internal linking is possible and causes listcontent to time-out
  - #2709 Install and uninstall post messages not shown.
  - #2717 Text inputs too short in page-copy-mode.
  - #2739 Permission Denied user type Editor or Designer.
  - #2744 Edit prefs missing div layout bug.
  - #2789 message usertagdeleted not shown because of wrong url.
  - #2791 News Module Pagination translation label. 
  - #2804 Re-ordering in Events. 
  - #2805 Deleting of an UDT attached to an Event. 
  - #2808 Page found by search, with "page is searchable" flag unchecked.
  - #2872 Login page showing, after deleting a template which is still in use.
  - Setting output_compression to false in config.php still sent compressed data.
  - Many fixes in html - Validations in admin side.
  - More
  
- Feature requests that are included:
  - #2045 Allow search to find expired news articles.
  - #2649 Notifications when deleting Stylesheets in use by templates.
  - Showall parameter added to News, to show all news-entries, regardless of end-date.

- Tiny